SimpleCalculator.g4
grammar SimpleCalculator;

program : (stmt)* ;

stmt: ID EQ expr #variableDeclaration_Statement
    | Begin (stmt)* END #beginEnd_Statement
    | IF expr THEN stmt (ELSE stmt)? #ifElse_Statement
    | WHILE expr DO stmt #whileDo_Statement
    | FOR ID EQ Number COLON Number DO stmt #forDo_Statement
    | LOOP ID COLON Number DO stmt #loopDo_Statement
    | PRINT (SL COMMA)* ID #print_Statement
    ;


expr: bin #expr_bin
    | expr BOOL bin #expr_bool
    ;


bin: mathematical #bin_mathematical
  | bin BINOP mathematical #bin_binop
  ;

mathematical: term #mathematical_term
  | mathematical PLUS term #mathematical_plus
  | mathematical MINUS term #mathematical_minus
  ;

term: factor #term_factor
  | term MULT factor #term_mult
  | term DIV factor #term_div
  ;

factor: Number #factor_number
  | MINUS factor #factor_minus_number
  | ID #factor_id
  | factor POWER Number #factor_power
  | OPENP expr CLOSEP #factor_expr
  ;

BOOL : '==' | '!=';
BINOP :  '<' | '>' | '<=' | '>=' | '!' ;
OPENP : '(' ;
CLOSEP : ')' ;
PLUS : '+';
MINUS : '-' ;
MULT : '*' ;
DIV : '/' ;
POWER : '^' ;
Number : [0-9]+ ;
EQ : '=' ;
COLON : ':';
PRINT : 'print';
IF : 'if';
THEN : 'then';
ELSE : 'else';
WHILE : 'while';
DO : 'do';
FOR : 'for';
LOOP : 'loop';
Begin : 'begin';
END : 'end';
COMMA: ',';
ID : [a-zA-Z][a-zA-Z0-9_]* ;
SL : '"' ~["\r\n]* '"';
WS :[ \t\n\r]+ -> skip;
