SimpleCalculatorParser.py
# Generated from SimpleCalculator.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleCalculatorParser ( Parser ):

    grammarFileName = "SimpleCalculator.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "<INVALID>", "'='", 
                     "':'", "'print'", "'if'", "'then'", "'else'", "'while'", 
                     "'do'", "'for'", "'loop'", "'begin'", "'end'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOL", "BINOP", "OPENP", "CLOSEP", "PLUS", 
                      "MINUS", "MULT", "DIV", "POWER", "Number", "EQ", "COLON", 
                      "PRINT", "IF", "THEN", "ELSE", "WHILE", "DO", "FOR", 
                      "LOOP", "Begin", "END", "COMMA", "ID", "SL", "WS" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_expr = 2
    RULE_bin = 3
    RULE_mathematical = 4
    RULE_term = 5
    RULE_factor = 6

    ruleNames =  [ "program", "stmt", "expr", "bin", "mathematical", "term", 
                   "factor" ]

    EOF = Token.EOF
    BOOL=1
    BINOP=2
    OPENP=3
    CLOSEP=4
    PLUS=5
    MINUS=6
    MULT=7
    DIV=8
    POWER=9
    Number=10
    EQ=11
    COLON=12
    PRINT=13
    IF=14
    THEN=15
    ELSE=16
    WHILE=17
    DO=18
    FOR=19
    LOOP=20
    Begin=21
    END=22
    COMMA=23
    ID=24
    SL=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCalculatorParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleCalculatorParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleCalculatorParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimpleCalculatorParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 20602880) != 0):
                self.state = 14
                self.stmt()
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleCalculatorParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileDo_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(SimpleCalculatorParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.ExprContext,0)

        def DO(self):
            return self.getToken(SimpleCalculatorParser.DO, 0)
        def stmt(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileDo_Statement" ):
                listener.enterWhileDo_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileDo_Statement" ):
                listener.exitWhileDo_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileDo_Statement" ):
                return visitor.visitWhileDo_Statement(self)
            else:
                return visitor.visitChildren(self)


    class LoopDo_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOOP(self):
            return self.getToken(SimpleCalculatorParser.LOOP, 0)
        def ID(self):
            return self.getToken(SimpleCalculatorParser.ID, 0)
        def COLON(self):
            return self.getToken(SimpleCalculatorParser.COLON, 0)
        def Number(self):
            return self.getToken(SimpleCalculatorParser.Number, 0)
        def DO(self):
            return self.getToken(SimpleCalculatorParser.DO, 0)
        def stmt(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopDo_Statement" ):
                listener.enterLoopDo_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopDo_Statement" ):
                listener.exitLoopDo_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopDo_Statement" ):
                return visitor.visitLoopDo_Statement(self)
            else:
                return visitor.visitChildren(self)


    class VariableDeclaration_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SimpleCalculatorParser.ID, 0)
        def EQ(self):
            return self.getToken(SimpleCalculatorParser.EQ, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration_Statement" ):
                listener.enterVariableDeclaration_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration_Statement" ):
                listener.exitVariableDeclaration_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration_Statement" ):
                return visitor.visitVariableDeclaration_Statement(self)
            else:
                return visitor.visitChildren(self)


    class IfElse_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(SimpleCalculatorParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.ExprContext,0)

        def THEN(self):
            return self.getToken(SimpleCalculatorParser.THEN, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCalculatorParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleCalculatorParser.StmtContext,i)

        def ELSE(self):
            return self.getToken(SimpleCalculatorParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse_Statement" ):
                listener.enterIfElse_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse_Statement" ):
                listener.exitIfElse_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse_Statement" ):
                return visitor.visitIfElse_Statement(self)
            else:
                return visitor.visitChildren(self)


    class ForDo_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(SimpleCalculatorParser.FOR, 0)
        def ID(self):
            return self.getToken(SimpleCalculatorParser.ID, 0)
        def EQ(self):
            return self.getToken(SimpleCalculatorParser.EQ, 0)
        def Number(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCalculatorParser.Number)
            else:
                return self.getToken(SimpleCalculatorParser.Number, i)
        def COLON(self):
            return self.getToken(SimpleCalculatorParser.COLON, 0)
        def DO(self):
            return self.getToken(SimpleCalculatorParser.DO, 0)
        def stmt(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForDo_Statement" ):
                listener.enterForDo_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForDo_Statement" ):
                listener.exitForDo_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForDo_Statement" ):
                return visitor.visitForDo_Statement(self)
            else:
                return visitor.visitChildren(self)


    class BeginEnd_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Begin(self):
            return self.getToken(SimpleCalculatorParser.Begin, 0)
        def END(self):
            return self.getToken(SimpleCalculatorParser.END, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCalculatorParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleCalculatorParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeginEnd_Statement" ):
                listener.enterBeginEnd_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeginEnd_Statement" ):
                listener.exitBeginEnd_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeginEnd_Statement" ):
                return visitor.visitBeginEnd_Statement(self)
            else:
                return visitor.visitChildren(self)


    class Print_StatementContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(SimpleCalculatorParser.PRINT, 0)
        def ID(self):
            return self.getToken(SimpleCalculatorParser.ID, 0)
        def SL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCalculatorParser.SL)
            else:
                return self.getToken(SimpleCalculatorParser.SL, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCalculatorParser.COMMA)
            else:
                return self.getToken(SimpleCalculatorParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_Statement" ):
                listener.enterPrint_Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_Statement" ):
                listener.exitPrint_Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_Statement" ):
                return visitor.visitPrint_Statement(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = SimpleCalculatorParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                localctx = SimpleCalculatorParser.VariableDeclaration_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.match(SimpleCalculatorParser.ID)
                self.state = 21
                self.match(SimpleCalculatorParser.EQ)
                self.state = 22
                self.expr(0)
                pass
            elif token in [21]:
                localctx = SimpleCalculatorParser.BeginEnd_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 23
                self.match(SimpleCalculatorParser.Begin)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 20602880) != 0):
                    self.state = 24
                    self.stmt()
                    self.state = 29
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 30
                self.match(SimpleCalculatorParser.END)
                pass
            elif token in [14]:
                localctx = SimpleCalculatorParser.IfElse_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.match(SimpleCalculatorParser.IF)
                self.state = 32
                self.expr(0)
                self.state = 33
                self.match(SimpleCalculatorParser.THEN)
                self.state = 34
                self.stmt()
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 35
                    self.match(SimpleCalculatorParser.ELSE)
                    self.state = 36
                    self.stmt()


                pass
            elif token in [17]:
                localctx = SimpleCalculatorParser.WhileDo_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.match(SimpleCalculatorParser.WHILE)
                self.state = 40
                self.expr(0)
                self.state = 41
                self.match(SimpleCalculatorParser.DO)
                self.state = 42
                self.stmt()
                pass
            elif token in [19]:
                localctx = SimpleCalculatorParser.ForDo_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.match(SimpleCalculatorParser.FOR)
                self.state = 45
                self.match(SimpleCalculatorParser.ID)
                self.state = 46
                self.match(SimpleCalculatorParser.EQ)
                self.state = 47
                self.match(SimpleCalculatorParser.Number)
                self.state = 48
                self.match(SimpleCalculatorParser.COLON)
                self.state = 49
                self.match(SimpleCalculatorParser.Number)
                self.state = 50
                self.match(SimpleCalculatorParser.DO)
                self.state = 51
                self.stmt()
                pass
            elif token in [20]:
                localctx = SimpleCalculatorParser.LoopDo_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.match(SimpleCalculatorParser.LOOP)
                self.state = 53
                self.match(SimpleCalculatorParser.ID)
                self.state = 54
                self.match(SimpleCalculatorParser.COLON)
                self.state = 55
                self.match(SimpleCalculatorParser.Number)
                self.state = 56
                self.match(SimpleCalculatorParser.DO)
                self.state = 57
                self.stmt()
                pass
            elif token in [13]:
                localctx = SimpleCalculatorParser.Print_StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.match(SimpleCalculatorParser.PRINT)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==25:
                    self.state = 59
                    self.match(SimpleCalculatorParser.SL)
                    self.state = 60
                    self.match(SimpleCalculatorParser.COMMA)
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(SimpleCalculatorParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleCalculatorParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Expr_binContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bin_(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.BinContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_bin" ):
                listener.enterExpr_bin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_bin" ):
                listener.exitExpr_bin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_bin" ):
                return visitor.visitExpr_bin(self)
            else:
                return visitor.visitChildren(self)


    class Expr_boolContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.ExprContext,0)

        def BOOL(self):
            return self.getToken(SimpleCalculatorParser.BOOL, 0)
        def bin_(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.BinContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_bool" ):
                listener.enterExpr_bool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_bool" ):
                listener.exitExpr_bool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_bool" ):
                return visitor.visitExpr_bool(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleCalculatorParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = SimpleCalculatorParser.Expr_binContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 70
            self.bin_(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SimpleCalculatorParser.Expr_boolContext(self, SimpleCalculatorParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 72
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 73
                    self.match(SimpleCalculatorParser.BOOL)
                    self.state = 74
                    self.bin_(0) 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleCalculatorParser.RULE_bin

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Bin_mathematicalContext(BinContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.BinContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mathematical(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.MathematicalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBin_mathematical" ):
                listener.enterBin_mathematical(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBin_mathematical" ):
                listener.exitBin_mathematical(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_mathematical" ):
                return visitor.visitBin_mathematical(self)
            else:
                return visitor.visitChildren(self)


    class Bin_binopContext(BinContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.BinContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bin_(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.BinContext,0)

        def BINOP(self):
            return self.getToken(SimpleCalculatorParser.BINOP, 0)
        def mathematical(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.MathematicalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBin_binop" ):
                listener.enterBin_binop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBin_binop" ):
                listener.exitBin_binop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_binop" ):
                return visitor.visitBin_binop(self)
            else:
                return visitor.visitChildren(self)



    def bin_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleCalculatorParser.BinContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_bin, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = SimpleCalculatorParser.Bin_mathematicalContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 81
            self.mathematical(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SimpleCalculatorParser.Bin_binopContext(self, SimpleCalculatorParser.BinContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_bin)
                    self.state = 83
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 84
                    self.match(SimpleCalculatorParser.BINOP)
                    self.state = 85
                    self.mathematical(0) 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MathematicalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleCalculatorParser.RULE_mathematical

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Mathematical_minusContext(MathematicalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.MathematicalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mathematical(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.MathematicalContext,0)

        def MINUS(self):
            return self.getToken(SimpleCalculatorParser.MINUS, 0)
        def term(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathematical_minus" ):
                listener.enterMathematical_minus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathematical_minus" ):
                listener.exitMathematical_minus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathematical_minus" ):
                return visitor.visitMathematical_minus(self)
            else:
                return visitor.visitChildren(self)


    class Mathematical_termContext(MathematicalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.MathematicalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathematical_term" ):
                listener.enterMathematical_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathematical_term" ):
                listener.exitMathematical_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathematical_term" ):
                return visitor.visitMathematical_term(self)
            else:
                return visitor.visitChildren(self)


    class Mathematical_plusContext(MathematicalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.MathematicalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mathematical(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.MathematicalContext,0)

        def PLUS(self):
            return self.getToken(SimpleCalculatorParser.PLUS, 0)
        def term(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathematical_plus" ):
                listener.enterMathematical_plus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathematical_plus" ):
                listener.exitMathematical_plus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathematical_plus" ):
                return visitor.visitMathematical_plus(self)
            else:
                return visitor.visitChildren(self)



    def mathematical(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleCalculatorParser.MathematicalContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_mathematical, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = SimpleCalculatorParser.Mathematical_termContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 92
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = SimpleCalculatorParser.Mathematical_plusContext(self, SimpleCalculatorParser.MathematicalContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_mathematical)
                        self.state = 94
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 95
                        self.match(SimpleCalculatorParser.PLUS)
                        self.state = 96
                        self.term(0)
                        pass

                    elif la_ == 2:
                        localctx = SimpleCalculatorParser.Mathematical_minusContext(self, SimpleCalculatorParser.MathematicalContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_mathematical)
                        self.state = 97
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 98
                        self.match(SimpleCalculatorParser.MINUS)
                        self.state = 99
                        self.term(0)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleCalculatorParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Term_factorContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def factor(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.FactorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm_factor" ):
                listener.enterTerm_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm_factor" ):
                listener.exitTerm_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm_factor" ):
                return visitor.visitTerm_factor(self)
            else:
                return visitor.visitChildren(self)


    class Term_divContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleCalculatorParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.TermContext,0)

        def DIV(self):
            return self.getToken(SimpleCalculatorParser.DIV, 0)
        def factor(self):
            return self.getTypedRuleContext(SimpleCalculatorParser.FactorContext,0)

